--- a/src/styles/layouts/settings_layout.module.sass
+++ b/src/styles/layouts/settings_layout.module.sass
@@ -42,3 +42,12 @@
         font-weight: 600
         text-decoration: none
   
+@media (max-width: 800px)
+  .container
+    grid-template-columns: 1fr
+    gap: 1rem
+
+    .nav
+      position: relative
+      width: 100% 
+      // background-color: red
