--- a/src/styles/pages/settings.module.sass
+++ b/src/styles/pages/settings.module.sass
@@ -128,6 +128,7 @@
           display: flex
           justify-content: space-between
           align-items: center
+          gap: 1rem
 
         .info
           display: flex
@@ -210,3 +211,19 @@
         display: flex
         flex-direction: column
         gap: 1.5rem
+
+@media (max-width: 500px)
+  .container
+    .settings-group
+      .setting
+        &.account-info
+          .setting-wrapper
+            margin-left: 0
+
+            input
+              width: 12rem
+
+            
+
+          
+
